hphp/hack/test/typecheck/subtype_array4.php.like_types.exp
File "subtype_array4.php", line 24, characters 11-12:
Invalid argument (Typing[4110])
File "subtype_array4.php", line 19, characters 18-34:
Expected ~darray<mixed, int> because it is an unenforceable type
File "subtype_array4.php", line 12, characters 21-39:
But got darray<string, bool>
